# fastapi

./: README.md
fastapi_proj/: demo.py  depends.py  main.py  models.py  pyproject.toml  query.py  req_body.py
fastapi_proj/src/fastapi_proj/: __init__.py
